Fix overflow page

--- a/css/n-land.css
+++ b/css/n-land.css
@@ -65,6 +65,7 @@
 }
 
 .image-slider {
+  width: 100%;
   display: none;
 }
 
